testsuite/tests/dependent/should_fail/T15215.stderr

T15215.hs:9:3: error:
    • Non type-variable argument in the constraint: Show (Maybe a)
      (Use FlexibleContexts to permit this)
    • In the definition of data constructor ‘MkA’
      In the data type declaration for ‘A’

T15215.hs:16:14: error:
    • Data constructor ‘MkB’ cannot be used here
        (it has an unpromotable context ‘Show a’)
    • In the first argument of ‘SA’, namely ‘MkB’
      In the type ‘SA MkB’
      In the definition of data constructor ‘SMkB’
